[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aocf = "0.1.18"
itertools = "0.10"
simple-error = "0.2"
regex = "0.1"
lazy-regex = "2.3"
indoc = "1.0"
ndarray = "0.15"
strum = "0.24"
strum_macros = "0.24"
num = "0.4"
priority-queue = "1.3"
json = "0.12"